[package]
authors = ["xiangong tang <tangxiangong@gmail.com>"]
edition = "2024"
name = "py-diffusionx"
version = "0.3.0"

[lib]
name = "_core"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "stub_gen"
path = "src/bin/stub_gen.rs"
required-features = ["stub_gen"]

[features]
stub_gen = ["pyo3-stub-gen"]

[dependencies]
diffusionx = "0.12"
gauss-quad = "0.3"
num_cpus = "1.17"
numpy = "0.28"
pyo3 = { version = "0.28", features = ["abi3-py311", "experimental-inspect"] }
pyo3-stub-gen = { version = "0.22", optional = true }
rand = "0.10"
rayon = "1.12"
thiserror = "2"
