[project]
name = "diffusionx"
version = "0.1.4"
description = "A library for random number/stochastic process simulation with high performance."
readme = "README.md"
authors = [{ name = "tangxiangong", email = "tangxiangong@gmail.com" }]
requires-python = ">=3.10"
dependencies = ["matplotlib>=3.9.4", "numpy>=2.0.0"]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "diffusionx._core"
python-source = "python"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
